// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/MetadataField should correctly not render a text field 1`] = `""`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render a date field 1`] = `
<DateMetadataField
  dataValue="value"
  onChange={[MockFunction]}
  onRemove={[MockFunction]}
/>
`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render a float field 1`] = `
<FloatMetadataField
  dataValue="value"
  onChange={[MockFunction]}
  onRemove={[MockFunction]}
  type="float"
/>
`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render a multi-select field 1`] = `
<MultiSelectMetadataField
  dataValue={
    [
      "value",
    ]
  }
  onChange={[MockFunction]}
  onRemove={[MockFunction]}
/>
`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render a read only field when not editable 1`] = `
<ReadOnlyMetadataField
  dataValue="value"
/>
`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render a taxonomy field - for the time being, in read-only mode 1`] = `
<ReadOnlyMetadataField
  dataValue="value"
  type="taxonomy"
/>
`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render a text field 1`] = `
<TextMetadataField
  dataValue="value"
  onChange={[MockFunction]}
  onRemove={[MockFunction]}
/>
`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render an enum field 1`] = `
<EnumMetadataField
  dataValue="value"
  onChange={[MockFunction]}
  onRemove={[MockFunction]}
/>
`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render an inline error for an invalid field type 1`] = `
<InlineError
  title="badbadbad"
>
  <FormattedMessage
    defaultMessage="Invalid metadata field type!"
    id="boxui.metadataInstanceFields.invalidMetadataFieldType"
  />
</InlineError>
`;

exports[`features/metadata-instance-editor/fields/MetadataField should correctly render an integer field 1`] = `
<IntegerMetadataField
  dataValue="value"
  onChange={[MockFunction]}
  onRemove={[MockFunction]}
  type="integer"
/>
`;
